<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="500dp"
    android:layout_width="360dp"
    android:padding="@dimen/activity_horizontal_margin"
    android:background="@color/middle_blue_purple">

    <TextView
        android:id="@+id/popup_title"
        style="@style/middle_titleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_need_help"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/popup_btn_close"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_close"
        app:tint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <ScrollView
        android:id="@+id/sv_popup"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_understand"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_btn_close" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/popup_connexion_title"
                style="@style/small_titleTextStyle"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/popup_connexion_text"
                style="@style/defaultTextStyle"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/popup_control_title"
                style="@style/small_titleTextStyle"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/popup_control_text"
                style="@style/defaultTextStyle"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/popup_settings_title"
                style="@style/small_titleTextStyle"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/popup_settings_text"
                style="@style/defaultTextStyle"/>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_understand"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/popup_understood"
        style="@style/defaultTextStyle"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@drawable/btn_understood"/>

</androidx.constraintlayout.widget.ConstraintLayout>