<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_purple"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <WebView
        android:id="@+id/wv_camera"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/v_camera_hidden"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="35dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_camera_status"
        android:visibility="visible"
        style="@style/defaultTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/control_camera_not_connected"
        app:layout_constraintBottom_toBottomOf="@+id/wv_camera"
        app:layout_constraintEnd_toEndOf="@+id/wv_camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/wv_camera" />

    <TextView
        android:id="@+id/tv_battery_percentage"
        style="@style/defaultTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/control_battery_percentage"
        app:layout_constraintBottom_toTopOf="@+id/wv_camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/activity_vertical_margin"/>

    <TextView
        android:id="@+id/tv_device_IP"
        style="@style/defaultTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/control_device_IP"
        app:layout_constraintBottom_toTopOf="@+id/wv_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="@dimen/activity_vertical_margin"/>

    <View
        android:id="@+id/v_view1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/middle_blue_purple"
        app:layout_constraintBottom_toTopOf="@+id/wv_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/v_view2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/middle_blue_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wv_camera" />

    <ToggleButton
        android:id="@+id/btn_ultrasoundActivation"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:background="@drawable/btn_ultrasound_activation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/v_view2"
        android:textOn=""
        android:textOff=""
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/btn_scan"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:background="@drawable/btn_control"
        android:src="@drawable/ic_btn_scan"
        app:layout_constraintStart_toEndOf="@+id/btn_ultrasoundActivation"
        app:layout_constraintTop_toBottomOf="@+id/v_view2"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/btn_tmp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:background="@drawable/btn_control"
        app:layout_constraintStart_toEndOf="@+id/btn_scan"
        app:layout_constraintTop_toBottomOf="@+id/v_view2"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/btn_triangle"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/btn_control"
        app:layout_constraintEnd_toStartOf="@+id/btn_rectangle"
        app:layout_constraintTop_toBottomOf="@+id/v_view2"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/btn_rectangle"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/btn_control"
        android:src="@drawable/ic_btn_rectangle"
        app:layout_constraintEnd_toStartOf="@+id/btn_return_home"
        app:layout_constraintTop_toBottomOf="@+id/v_view2"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/btn_return_home"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/btn_control"
        android:src="@drawable/ic_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/v_view2"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/btn_stop"
        android:layout_width="@dimen/activity_control_btn_size"
        android:layout_height="@dimen/activity_control_btn_size"
        android:background="@drawable/btn_navigation"
        android:src="@drawable/ic_control"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wv_camera"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/btn_left"
        android:layout_width="@dimen/activity_control_btn_size"
        android:layout_height="@dimen/activity_control_btn_size"
        android:background="@drawable/btn_navigation"
        android:src="@drawable/ic_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_stop"
        app:layout_constraintTop_toBottomOf="@+id/wv_camera"
        android:layout_marginEnd="@dimen/activity_control_btn"
        tools:ignore="ContentDescription"/>

    <ImageButton
        android:id="@+id/btn_forwards"
        android:layout_width="@dimen/activity_control_btn_size"
        android:layout_height="@dimen/activity_control_btn_size"
        android:background="@drawable/btn_navigation"
        android:src="@drawable/ic_arrow_x"
        app:layout_constraintBottom_toTopOf="@+id/btn_stop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="@dimen/activity_control_btn"
        tools:ignore="ContentDescription"/>

    <ImageButton
        android:id="@+id/btn_right"
        android:layout_width="@dimen/activity_control_btn_size"
        android:layout_height="@dimen/activity_control_btn_size"
        android:background="@drawable/btn_navigation"
        android:src="@drawable/ic_arrow"
        android:rotation="180"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_stop"
        app:layout_constraintTop_toBottomOf="@+id/wv_camera"
        android:layout_marginStart="@dimen/activity_control_btn"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/btn_backwards"
        android:layout_width="@dimen/activity_control_btn_size"
        android:layout_height="@dimen/activity_control_btn_size"
        android:background="@drawable/btn_navigation"
        android:src="@drawable/ic_arrow_x"
        android:rotation="180"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_stop"
        android:layout_marginTop="@dimen/activity_control_btn"
        tools:ignore="ContentDescription"/>

</androidx.constraintlayout.widget.ConstraintLayout>